# m2-uca_imagelib

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
doc/: classes.md  test.md
doc/doxygen/html/: ImagePreProcessor_8hpp_source.html  JetPositionChecker_8hpp_source.html  LaserBehavior_8hpp_source.html  LineDetector_8hpp_source.html  PlantDetector_8hpp_source.html  Plant_8hpp_source.html  ProcessingFactory_8hpp_source.html  Species_8hpp_source.html  annotated.html  classes.html  classidl_1_1ImagePreProcessor-members.html  classidl_1_1ImagePreProcessor.html  classidl_1_1JetPositionChecker-members.html  classidl_1_1JetPositionChecker.html  classidl_1_1LineDetector-members.html  classidl_1_1LineDetector.html  classidl_1_1Plant-members.html  classidl_1_1Plant.html  classidl_1_1PlantDetector-members.html  classidl_1_1PlantDetector.html  classidl_1_1ProcessingFactory-members.html  classidl_1_1ProcessingFactory.html  classidl_1_1ProcessingFactory_1_1ImageProcessing-members.html  classidl_1_1ProcessingFactory_1_1ImageProcessing.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  graph_legend.html  index.html  structidl_1_1AdvantisParams-members.html  structidl_1_1AdvantisParams.html  structidl_1_1Circle-members.html  structidl_1_1Circle.html  structidl_1_1ContourInfo-members.html  structidl_1_1ContourInfo.html  structidl_1_1WheatParams-members.html  structidl_1_1WheatParams.html
doc/doxygen/html/search/: all_0.js  all_1.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  searchdata.js
doc/doxygen/latex/: ImagePreProcessor_8hpp_source.tex  JetPositionChecker_8hpp_source.tex  LaserBehavior_8hpp_source.tex  LineDetector_8hpp_source.tex  PlantDetector_8hpp_source.tex  Plant_8hpp_source.tex  ProcessingFactory_8hpp_source.tex  Species_8hpp_source.tex  annotated.tex  classidl_1_1ImagePreProcessor.tex  classidl_1_1JetPositionChecker.tex  classidl_1_1LineDetector.tex  classidl_1_1Plant.tex  classidl_1_1PlantDetector.tex  classidl_1_1ProcessingFactory.tex  classidl_1_1ProcessingFactory_1_1ImageProcessing.tex  files.tex  refman.tex  structidl_1_1AdvantisParams.tex  structidl_1_1Circle.tex  structidl_1_1ContourInfo.tex  structidl_1_1WheatParams.tex
include/: ImagePreProcessor.hpp  JetPositionChecker.hpp  LaserBehavior.hpp  LineDetector.hpp  Main.hpp  Plant.hpp  PlantDetector.hpp  ProcessingFactory.hpp  Species.hpp
src/: ImagePreProcessor.cpp  JetPositionChecker.cpp  LineDetector.cpp  PlantDetector.cpp  ProcessingFactory.cpp  TestPreProcess.cpp  main.cpp  plantDetector.cpp
